<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"

    tools:context="com.fvobe.android.scorekeeper.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/archery"
            android:background="#59000000"
            android:scaleType="centerCrop"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal"
        android:paddingRight="@dimen/activity_horizontal"
        android:paddingTop="@dimen/activity_vertical"
        android:paddingBottom="@dimen/activity_vertical"
        android:orientation="horizontal">


    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
        android:id="@+id/player1lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="18sp"
        android:fontFamily="casual"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:text="@string/player1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:layout_gravity="center_horizontal"
            android:text="@string/initial_score"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:fontFamily="sans-serif-light"
            android:layout_marginTop="@dimen/activity_vertical"
            android:id="@+id/player1_score"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/button_horizontal"
            android:layout_marginRight="@dimen/button_horizontal"
            android:layout_marginTop="@dimen/activity_vertical"
            android:text="@string/goldBtn"
            android:id="@+id/gold1"
            android:onClick="plus91"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/button_horizontal"
            android:layout_marginRight="@dimen/button_horizontal"
            android:layout_marginTop="@dimen/btn_top"
            android:text="@string/redBtn"
            android:id="@+id/red1"
            android:onClick="plus71"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/button_horizontal"
            android:layout_marginRight="@dimen/button_horizontal"
            android:layout_marginTop="@dimen/btn_top"
            android:text="@string/blueBtn"
            android:id="@+id/blue1"
            android:onClick="plus51"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/button_horizontal"
            android:layout_marginRight="@dimen/button_horizontal"
            android:layout_marginTop="@dimen/btn_top"
            android:text="@string/blackBtn"
            android:id="@+id/black1"
            android:onClick="plus31"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/button_horizontal"
            android:layout_marginRight="@dimen/button_horizontal"
            android:layout_marginTop="@dimen/btn_top"
            android:text="@string/whiteBtn"
            android:id="@+id/white1"
            android:onClick="plus11"/>

    </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/white"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/player2lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="18sp"
            android:fontFamily="casual"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:text="@string/player2"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:layout_gravity="center_horizontal"
            android:text="@string/initial_score"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:fontFamily="sans-serif-light"
            android:layout_marginTop="@dimen/activity_vertical"
            android:id="@+id/player2_score"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/button_horizontal"
            android:layout_marginRight="@dimen/button_horizontal"
            android:layout_marginTop="@dimen/activity_vertical"
            android:text="@string/goldBtn"
            android:id="@+id/gold2"
            android:onClick="plus92"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/button_horizontal"
            android:layout_marginRight="@dimen/button_horizontal"
            android:layout_marginTop="@dimen/btn_top"
            android:text="@string/redBtn"
            android:id="@+id/red2"
            android:onClick="plus72"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/button_horizontal"
            android:layout_marginRight="@dimen/button_horizontal"
            android:layout_marginTop="@dimen/btn_top"
            android:text="@string/blueBtn"
            android:id="@+id/blue2"
            android:onClick="plus52"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/button_horizontal"
            android:layout_marginRight="@dimen/button_horizontal"
            android:layout_marginTop="@dimen/btn_top"
            android:text="@string/blackBtn"
            android:id="@+id/black2"
            android:onClick="plus32"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/button_horizontal"
            android:layout_marginRight="@dimen/button_horizontal"
            android:layout_marginTop="@dimen/btn_top"
            android:text="@string/whiteBtn"
            android:id="@+id/white2"
            android:onClick="plus12"/>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/button_horizontal"
        android:layout_marginRight="@dimen/button_horizontal"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="@dimen/btn_top"
        android:textColor="@android:color/white"
        android:background="#3f51b5"
        android:text="@string/reset"
        android:id="@+id/reset"
        android:onClick="reset"/>
    </RelativeLayout>
</ScrollView>
